multi_port_motor_feedback/multi_port_motor_feedback_ros2/log/build_2026-01-12_20-32-04/multi_port_motor_feedback/stderr.log
In file included from /home/linaro/ludan_sdk/multi_port_motor_feedback/multi_port_motor_feedback_ros2/../../LINUX_CANFDNET_V1.3.0.5_example/src/CANFDNET.h:4,
                 from /home/linaro/ludan_sdk/multi_port_motor_feedback/multi_port_motor_feedback_ros2/src/can_motor_feedback_publisher.cpp:29:
/home/linaro/ludan_sdk/multi_port_motor_feedback/multi_port_motor_feedback_ros2/../../LINUX_CANFDNET_V1.3.0.5_example/src/zlgcan/zlgcan.h:584:16: warning: ISO C++ prohibits anonymous structs [-Wpedantic]
  584 |         struct {
      |                ^
/home/linaro/ludan_sdk/multi_port_motor_feedback/multi_port_motor_feedback_ros2/src/can_motor_feedback_publisher.cpp:236:63: error: redefinition of ‘std::array<std::chrono::time_point<std::chrono::_V2::steady_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >, 30> g_last_seen_time’
  236 | std::array<std::chrono::steady_clock::time_point, NUM_MOTORS> g_last_seen_time = [] {
      |                                                               ^~~~~~~~~~~~~~~~
/home/linaro/ludan_sdk/multi_port_motor_feedback/multi_port_motor_feedback_ros2/src/can_motor_feedback_publisher.cpp:230:63: note: ‘std::array<std::chrono::time_point<std::chrono::_V2::steady_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >, 30> g_last_seen_time’ previously defined here
  230 | std::array<std::chrono::steady_clock::time_point, NUM_MOTORS> g_last_seen_time;
      |                                                               ^~~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/can_motor_feedback_publisher.dir/build.make:76: CMakeFiles/can_motor_feedback_publisher.dir/src/can_motor_feedback_publisher.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:396: CMakeFiles/can_motor_feedback_publisher.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
